# healpix-painter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: get_footprint_coords_decam.py  get_footprint_coords_ztf.py
scratchwork/: check_lsm_contours.py  decam.crtf  get_archive_coverage_decam.py  get_decam_archive_coverage.py  get_footprint_coords_decam.py  rotations.py
src/healpix_painter/: __init__.py  __main__.py  basicpainter.py  cli.py  footprints.py  healpix.py  plotting.py
src/healpix_painter/data/footprints/: decam.convexhull.crtf  decam.crtf  decam_convexhull.crtf  ztf.convexhull.crtf  ztf.crtf
src/healpix_painter/io/: footprints.py  healpix.py  output.py  parser.py  plotting.py
src/healpix_painter/scratchwork/: rotations.py
src/healpix_painter/telescopes/: __init__.py  decam.py  ztf.py
src/healpix_painter/tilings/: clustering.py  decam.py
tests/: test_cli.py  test_healpix.py
tests/test_complete/: test_complete.py
tests/test_data/: S251112cm.pointings_ztf.csv
tests/test_healpix/: S251112cm.Bilby.multiorder.fits  S251112cm.pointings_decam_g.csv  S251112cm.pointings_ztf.csv  test_healpix.py
tests/test_plotting/: test_plotting.py
