[project]
name = "healpix-painter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tomas-cabrera", email = "tcabrera@andrew.cmu.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.6.0",
    "ligo-skymap>=2.2.2",
    "lxml>=6.0.2",
    "pandas>=2.3.0",
    "parmap>=1.7.0",
    "pytest>=8.3.5",
    "regions>=0.10",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[tool.ruff]
exclude = [
    "scratchwork",
]

[project.scripts]
healpix-painter = "healpix_painter.cli:app"
